header & nav complete. begin main banner

--- a/index.html
+++ b/index.html
@@ -2,13 +2,39 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="resources/css/reset.css" type="text/css">
     <link rel="stylesheet" href="resources/css/style.css" type="text/css">
     <title>Colmar Academy</title>
   </head>
 
   <body>
-    <header>
 
+    <!-- Header -->
+
+    <header>
+      <div class="header-logo">
+        <img src="./resources/images/ic-logo.svg" alt="School Logo">
+        <h3 class="title-logo"><span>COLMAR</span>ACADEMY</h3>
+      </div>
+
+      <!-- Desktop Header & Nav -->
+
+      <nav class="desktop">
+        <a href="#">On campus</a>
+        <a href="#">Online</a>
+        <a href="#">Companies</a>
+        <a href="#">Sign In</a>
+      </nav>
+
+      <!-- Mobile Header & Nav -->
+
+      <nav class="mobile">
+        <a href="#"><img src="./resources/images/ic-logo.svg" alt="Logo"></a>
+        <a href="#"><img src="./resources/images/ic-on-campus.svg" alt="Campus"></a>
+        <a href="#"><img src="./resources/images/ic-online.svg" alt="Online"></a>
+        <a href="#"><img src="./resources/images/ic-login.svg" alt="Login"></a>
+      </nav>
     </header>
+
   </body>
 </html>
