first banner complete

--- a/index.html
+++ b/index.html
@@ -36,5 +36,14 @@
       </nav>
     </header>
 
+    <div class="banner">
+      <img src="./resources/images/banner.jpg" alt="Main Banner">
+      <div class="side-text">
+        <h1>Learn Something new Everyday</h1>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        <a href="#" class="start">Start here</a>
+      </div>
+    </div>
+
   </body>
 </html>
