second section content added. begin styling

--- a/index.html
+++ b/index.html
@@ -45,5 +45,57 @@
       </div>
     </div>
 
+    <!-- Second Section "Keep practicing" -->
+
+    <!-- Left Side -->
+
+    <div class="information">
+      <div class="multi-container">
+        <div class="main-pic-box">
+          <img src="./resources/images/information-main.jpg" alt="Student Reading Book">
+          <h2>It doesn't hurt to keep practicing</h2>
+           <p>"Curabitur vitae libero ipsum porttior consequat. Aliquam et commodo
+             lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed
+             consequat ex. Etiam eget magna laoreet efficitur dolo consequat,
+             tristique ligula."</p>
+          <h5>Emaunuel, Sr Strategist at Hiring.com</h5>
+        </div>
+
+        <!-- Right Column -->
+
+        <div class="stacked-content-box">
+           <div class="content-box">
+             <img id="pc-pic" src="./resources/images/information-orientation.jpg" alt="Bird's eye view of orientation" title="">
+             <img id="mobile-pic" src="./resources/images/information-orientation-mobile.jpg" alt="Bird's eye view of orientation">
+             <div class="side-text">
+               <h3>Orientation Date</h3>
+               <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+               <a href="#">Read more</a>
+             </div>
+           </div>
+
+           <div class="content-box">
+             <img id="pc-pic" src="./resources/images/information-campus.jpg" alt="Indoors look at common area" title="" style="">
+             <img id="mobile-pic" src="./resources/images/information-campus-mobile.jpg" alt="Indoors look at common area">
+             <div class="side-text">
+               <h3>Our campus</h3>
+               <p>Find a campus near you</p>
+               <a href="#">Read more</a>
+             </div>
+           </div>
+
+           <div class="content-box">
+             <img id="pc-pic" src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sacks" title="" style="">
+             <img id="mobile-pic" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Oliver Sacks">
+             <div class="side-text">
+               <h3>Our guest lecture</h3>
+               <p>Join a keynote with Oliver Sacks about music in medical treatment</p>
+               <a href="#">Read more</a>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+
   </body>
 </html>
