--- a/index.html
+++ b/index.html
@@ -98,5 +98,67 @@
        </div>
      </div>
 
+     <!--Third Section "Start Learning" -->
+
+     <div class="learn">
+       <h2>Start Learning</h2>
+       <div class="learn-container">
+         <div class="learn-box">
+           <img src="./resources/images/course-software.jpg" alt="Desktop Computers">
+           <div class="learn-text">
+           <h3>Software Engineering</h3>
+           <p>COURSES</p>
+           <p>Web Development, Mobile Development, IoT, APIs</p>
+          </div>
+         </div>
+
+         <div class="learn-box">
+           <img src="./resources/images/course-computer-art.jpg" alt="Phone at Table">
+           <div class="learn-text">
+             <h3>Computer Art</h3>
+             <p>COURSES</p>
+             <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
+           </div>
+         </div>
+
+         <div class="learn-box">
+            <img src="./resources/images/course-design.jpg" alt="Person Holding Camera">
+            <div class="learn-text">
+              <h3>Design</h3>
+              <p>COURSES</p>
+              <p>User Experience Design, User Research, Visual Design</p>
+            </div>
+          </div>
+
+          <div class="learn-box">
+            <img src="./resources/images/course-data.jpg" alt="Open Laptop with Data Charts">
+            <div class="learn-text">
+              <h3>Data</h3>
+              <p>COURSES</p>
+              <p>Data Science, Big Data, SQL, Data Visualization</p>
+            </div>
+          </div>
+
+          <div class="learn-box">
+            <img src="./resources/images/course-business.jpg" alt="Chess Set">
+            <div class="learn-text">
+              <h3>Business</h3>
+              <p>COURSES</p>
+              <p>Product Development, Business Development, Startup</p>
+            </div>
+          </div>
+
+          <div class="learn-box">
+            <img src="./resources/images/course-marketing.jpg" alt="Person using smart watch">
+            <div class="learn-text">
+              <h3>Marketing</h3>
+              <p>COURSES</p>
+              <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
+          </div>
+       </div>
+     </div>
+
+
   </body>
 </html>
