third section styling complete. begin footer

--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
        </div>
      </div>
 
+     <!-- Footer Section "Thesis Exhibit"-->
+     
+     <footer>..</footer>
 
   </body>
 </html>
