thesis content and additional styling complete. begin footer.

--- a/index.html
+++ b/index.html
@@ -159,9 +159,36 @@
        </div>
      </div>
 
-     <!-- Footer Section "Thesis Exhibit"-->
-     
-     <footer>..</footer>
+     <!-- Fourth Section "Thesis Exhibit"-->
 
+     <div class="thesis">
+       <h2>Thesis Exhibits</h2>
+       <div class="multi-container">
+         <div class="main-pic-box">
+           <video src="./resources/videos/thesis.mp4" autoplay muted loop alt="Shadow on building"></video>
+           <h3>Reimagine Urban</h3>
+           <p>"Curabitur vitae libero ipsum porttior consequat. Aliquam et commodo
+             lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed
+             consequat ex. Etiam eget magna laoreet efficitur dolo consequat,
+             tristique ligula."</p>
+         </div>
+       <div class="stacked-content-box">
+         <div class="content-box">
+           <img src="./resources/images/thesis-fisma.jpg" alt="Highlighter and Phone with paper" title="" style="">
+           <div class="side-text">
+             <h3>FISMA: Design and Security</h3>
+             <p>Designer showcase of new prototype project</p>
+           </div>
+         </div>
+         <div class="content-box">
+           <img src="./resources/images/thesis-now-and-then.jpg" alt="City skyline" title="" style="">
+           <div class="side-text">
+             <h3>Now and Then</h3>
+             <p>Research study about New York</p>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
   </body>
 </html>
