--- a/index.html
+++ b/index.html
@@ -190,5 +190,15 @@
        </div>
      </div>
    </div>
+
+   <!-- Footer Section -->
+
+    <footer>
+      <h5>© 2016 Colmar Academy. All rights reserved</h5>
+      <nav class="legal">
+          <span>Terms</span>
+          <span>Privacy</span>
+      </nav>
+    </footer>
   </body>
 </html>
