mobile header finished. mobile banner almost complete.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#">Sign In</a>
       </nav>
 
-      <!-- Mobile Header & Nav -->
+      <!-- Mobile Header & Nav "Banner"-->
 
       <nav class="mobile">
         <a href="#"><img src="./resources/images/ic-logo.svg" alt="Logo"></a>
